--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-sitemap": "node generateSitemap.cjs"
   },
   "dependencies": {
     "async": "^3.2.6",
@@ -22,6 +23,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
+    "sitemap": "^8.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -34,7 +36,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
-    "vite": "^5.4.10",
-    "vite-plugin-sitemap": "^0.7.1"
+    "vite": "^5.4.10"
   }
 }
